# IADB-ass

./: .gitignore  README.md  analyze.ipynb  notes.md  pyproject.toml
.ipynb_checkpoints/: analyze-checkpoint.ipynb
data/: taxonomy_labels.json
src/: embeds.py  text_analyze.py  utils.py
